put a unit for the margin in body in the css file

--- a/styleme.css
+++ b/styleme.css
@@ -2,7 +2,7 @@
 body {
     background-color: #f0f8ff;
     font-family: Arial, sans-serif;
-    margin: 10;
+    margin: 10em;
     padding: 0;
 }
 
